--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "fscore.ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,48 +10,35 @@
     "email": "email dev"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
-    "@react-email/components": "0.0.25",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/next": "^9.0.0",
-    "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "bullmq": "^5.21.1",
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.34.1",
-    "framer-motion": "^11.11.9",
-    "fs": "^0.0.1-security",
-    "gray-matter": "^4.0.3",
+    "framer-motion": "^11.16.0",
     "ioredis": "^5.4.1",
     "lenis": "^1.1.14",
-    "markdown-to-jsx": "^7.4.5",
-    "next": "^14.1.4",
+    "next": "^15.1.3",
     "next-auth": "^4.24.8",
     "next-share": "^0.27.0",
     "path": "^0.12.7",
     "pg": "^8.13.0",
     "ra-data-json-server": "^5.2.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-admin": "^5.2.0",
-    "react-dom": "^18",
     "react-hook-form": "^7.51.3",
-    "react-intersection-observer": "^9.13.1",
-    "react-markdown": "^9.0.1",
     "react-social-icons": "^6.16.0",
     "redis": "^4.7.0",
     "remark": "^15.0.1",
-    "remark-react": "^9.0.1",
-    "resend": "^4.0.0",
-    "uuid": "^10.0.0",
-    "vercel": "^34.1.1"
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
+    "@types/node": "^22.10.5",
     "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -59,7 +46,6 @@
     "autoprefixer": "^10.0.1",
     "drizzle-kit": "^0.25.0",
     "postcss": "^8",
-    "react-email": "^3.0.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.6.3"
   },
